<!--
  ~ Copyright 2017 Oursky Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">SkygearExample</string>
    <string name="skygear_scheme">skygearexample</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="login_with_browser">Login with browser</string>
    <string name="link_with_browser">Link with browser</string>
    <string name="login_with_access_token">Login with access token</string>
    <string name="link_with_access_token">Link with access token</string>
    <string name="unlink_provider">Unlink provider</string>
    <string name="access_token_hint">Access token from provider</string>
    <string name="get_provider_profiles">Get provider profiles</string>
    <string name="endpoint_indicator">Endpoint:</string>
    <string name="api_key_indicator">API Key:</string>
    <string name="Unknown">Unknown</string>
    <string name="access_token_indicator">Access Token:</string>
    <string name="logout">Logout</string>
    <string name="user_id_indicator">User ID:</string>
    <string name="username_indicator">Username:</string>
    <string name="undefined">undefined</string>
    <string name="user_authentication">User Authentication</string>
    <string name="record_management">Record Management</string>
    <string name="record_fields">Record Fields</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="save">Save</string>
    <string name="record_create_delete">Create / Delete</string>
    <string name="query">Query</string>
    <string name="delete">Delete</string>
    <string name="record_query">Query</string>
    <string name="channel">Channel</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="channel_name">Channel Name</string>
    <string name="pubsub">Pubsub</string>
    <string name="user_management">User Management</string>
    <string name="user_query">User Query</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_indicator">Email:</string>
    <string name="lambda_functions">Lambda Functions</string>
    <string name="lambda_functions_with_map">Lambda Functions With Map</string>
    <string name="others">Others</string>
    <string name="lambda_function_name">Name</string>
    <string name="function_arguments">Arguments</string>
    <string name="function_keys">Keys</string>
    <string name="function_values">Values</string>
    <string name="server_config">Server Configuration</string>
    <string name="configure">Configure</string>
    <string name="endpoint">Endpoint</string>
    <string name="endpoint_hint">https://myapp.skygeario.com/</string>
    <string name="api_key">API Key</string>
    <string name="api_key_hint">dc0903fa85924776baa77df813901efc</string>
    <string name="who_am_i">Who Am I</string>
    <string name="set_image">Set Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="transient_include">Transient Include</string>
    <string name="set_current_location">Set to current location</string>
    <string name="gcm_sender_id_title">GCM Sender ID (Optional)</string>
    <string name="encrypt_user_data_title">Encrypt User Data</string>
    <string name="gcm_sender_id">GCM Sender ID</string>
    <string name="signup_with_email">Signup With Email</string>
    <string name="signup_anonymously">Signup Anonymously</string>
    <string name="social_login">Social Login</string>
    <string name="or">Or</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_code">Code</string>
    <string name="reset_password_expire_at">Expire At</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_custom_token">Login with Custom Token</string>
    <string name="custom_token">Custom Token</string>
    <string name="verify_user_data">Verify User Data</string>
    <string name="verify_select_data">Select the user data to be verified. This example app only supports email and phone.</string>
    <string name="verify_email">email</string>
    <string name="verify_phone">phone</string>
    <string name="verify_email_missing">email (missing)</string>
    <string name="verify_phone_missing">phone (missing)</string>
    <string name="verify_code">Verification Code</string>
    <string name="enter_app_info">Enter the Skygear Endpoint and API key (you can obtain them from portal).</string>
    <string name="not_configured">(not configured)</string>
</resources>
