<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Oursky Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.skygear.skygear_example.OAuthActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doLoginWithWebFlow"
        android:text="@string/login_with_browser" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doLinkWithWebFlow"
        android:text="@string/link_with_browser" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"></LinearLayout>

    <EditText
        android:id="@+id/access_token_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/access_token_hint"
        android:lines="1"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doLoginWithAccessToken"
        android:text="@string/login_with_access_token" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doLinkWithAccessToken"
        android:text="@string/link_with_access_token" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"></LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="doUnlinkWithAccessToken"
        android:text="@string/unlink_provider" />

</LinearLayout>
