<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="io.skygear.skygear_example.ServerConfigurationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/endpoint_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:text="@string/endpoint" />

        <EditText
            android:id="@+id/endpoint_edittext"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/endpoint_label"
            android:layout_toEndOf="@id/endpoint_label"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textUri"
            android:hint="@string/endpoint_hint"
            android:nextFocusDown="@+id/api_key_edittext"
            android:nextFocusForward="@id/api_key_edittext" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/api_key_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:text="@string/api_key" />

        <EditText
            android:id="@id/api_key_edittext"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/api_key_label"
            android:layout_toEndOf="@id/api_key_label"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionDone"
            android:hint="@string/api_key_hint" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure"
            android:onClick="doConfigure"/>

    </LinearLayout>

</LinearLayout>
